--- a/MemoryMosaic/Shared/Input/IntInput.razor
+++ b/MemoryMosaic/Shared/Input/IntInput.razor
@@ -5,11 +5,11 @@
 @{
 	if (Disabled)
 	{
-		<input @ref="@input" type="number" id="@ID" class="@Class @(HideSpinner ? "hide-number-buttons" : "")" style="font-size: @(FontSize)px; width: @Width; @Style" @bind="@Input" @bind:after="@UpdateInput" @onkeydown="@HandleKeyDown" @onfocusout="@HandleFocusOut" @bind:event="oninput" min="@Min" max="@Max" placeholder="@Placeholder" disabled/>
+		<input @ref="@input" type="number" id="@ID" class="@Class @(HideSpinner ? "hide-number-buttons" : "")" style="font-size: @(FontSize)px; width: @Width; @Style" @bind="@Input" @bind:after="@UpdateInput" @onkeydown="@HandleKeyDown" @onchange="@HandleOnChange" @onfocusout="@HandleFocusOut" @bind:event="oninput" min="@Min" max="@Max" placeholder="@Placeholder" disabled/>
 	}
 	else
 	{
-		<input @ref="@input" type="number" id="@ID" class="@Class @(HideSpinner ? "hide-number-buttons" : "")" style="font-size: @(FontSize)px; width: @Width; @Style" @bind="@Input" @bind:after="@UpdateInput" @onkeydown="@HandleKeyDown" @onfocusout="@HandleFocusOut" @bind:event="oninput" min="@Min" max="@Max" placeholder="@Placeholder"/>
+		<input @ref="@input" type="number" id="@ID" class="@Class @(HideSpinner ? "hide-number-buttons" : "")" style="font-size: @(FontSize)px; width: @Width; @Style" @bind="@Input" @bind:after="@UpdateInput" @onkeydown="@HandleKeyDown" @onchange="@HandleOnChange" @onfocusout="@HandleFocusOut" @bind:event="oninput" min="@Min" max="@Max" placeholder="@Placeholder"/>
 	}
 }
 
