Split up Shared into Constants and Mixins files. Shared now only used in _Host.cshtml.

--- a/MemoryMosaic/Styles/Components/Buttons/IconTextButton.scss
+++ b/MemoryMosaic/Styles/Components/Buttons/IconTextButton.scss
@@ -1,3 +1,5 @@
+@import "../../Constants";
+
 .iconTextBtn {
     background-color: black;
     border: 1px solid white;
@@ -13,6 +15,6 @@
 }
 
 .iconTextBtn:hover {
-    background-color: var(--hover-color);
+    background-color: $HoverColor;
     cursor: pointer;
 }
