--- a/MemoryMosaic/Styles/Components/Buttons/DropdownButton.scss
+++ b/MemoryMosaic/Styles/Components/Buttons/DropdownButton.scss
@@ -1,3 +1,5 @@
+@import "../../Constants";
+
 .dropdownBtn {
     background-color: black;
     border: none;
@@ -12,6 +14,6 @@
 }
 
 .dropdownBtn:hover {
-    background-color: var(--hover-color);
+    background-color: $HoverColor;
     cursor: pointer;
 }
