--- a/MemoryMosaic/Styles/Components/Buttons/IconButton.scss
+++ b/MemoryMosaic/Styles/Components/Buttons/IconButton.scss
@@ -1,3 +1,5 @@
+@import "../../Constants";
+
 .iconBtn {
     color: white;
     border-radius: 50%;
@@ -11,6 +13,6 @@
 }
 
 .iconBtn:hover {
-    background-color: var(--hover-color);
+    background-color: $HoverColor;
     cursor: pointer;
 }
