--- a/MemoryMosaic/Styles/Components/Import/ImportItemDisplay.scss
+++ b/MemoryMosaic/Styles/Components/Import/ImportItemDisplay.scss
@@ -29,9 +29,7 @@
     margin-right: 10px;
 }
 
-.importItem > .checkBtn > .checkbox:hover {
-    cursor: pointer;
-}
+.importItem > .checkBtn > .checkbox:hover { cursor: pointer; }
 
 .importItem > .checkBtn > .checked {
     color: #009FFF;
