Add constant for gray collection cover background

--- a/MemoryMosaic/Styles/Pages/Collections.scss
+++ b/MemoryMosaic/Styles/Pages/Collections.scss
@@ -42,7 +42,7 @@ main {
 			overflow: hidden;
 			width: 200px;
 			height: 200px;
-			background-color: #212121;
+			background-color: $CoverBackground;
 			border-radius: 4px;
 		}
 
