--- a/MemoryMosaic/Styles/Components/FullscreenViewer/FullscreenViewer.scss
+++ b/MemoryMosaic/Styles/Components/FullscreenViewer/FullscreenViewer.scss
@@ -170,7 +170,7 @@
 						width: 60px;
 						height: 60px;
 						overflow: hidden;
-						background-color: #212121;
+						background-color: $CoverBackground;
 						
 						> img {
 							width: 100%;
