--- a/MemoryMosaic/Styles/Components/Input/TextInput.scss
+++ b/MemoryMosaic/Styles/Components/Input/TextInput.scss
@@ -1,3 +1,5 @@
+@import "../../Constants";
+
 input[type=text] {
 	background-color: black;
 	border: 2px solid white;
@@ -7,6 +9,6 @@ input[type=text] {
 }
 
 input[type=text]:focus-visible {
-	border: 2px solid #0080ff;
+	border: 2px solid $AccentColor;
 	outline: none;
 }
