--- a/MemoryMosaic/Styles/Components/NavMenu.scss
+++ b/MemoryMosaic/Styles/Components/NavMenu.scss
@@ -33,8 +33,8 @@ nav {
 		&:hover { background-color: rgb(0, 72, 255, 0.09); }
 
 		> * {
-			color: #0080ff;
-			fill: #0080ff;
+			color: $AccentColor;
+			fill: $AccentColor;
 		}
 	}
 
