Fix all remaining incorrect blue values

--- a/MemoryMosaic/Pages/Collections.razor
+++ b/MemoryMosaic/Pages/Collections.razor
@@ -18,10 +18,10 @@
 </header>
 
 <Dropdown @ref="@dropdown" Positioning="top: 64px; right: 182px">
-    <DropdownButton Icon="check" Text="Collection Title" OnClick="@(() => ChangeOrder(CollectionsSortMode.Title))" IconStyle="@(sortMode == CollectionsSortMode.Title ? "color: #1a73e8" : "visibility: hidden")" TextColor="@(sortMode == CollectionsSortMode.Title ? "#1a73e8" : "white")"/>
-    <DropdownButton Icon="check" Text="Title Reversed" OnClick="@(() => ChangeOrder(CollectionsSortMode.TitleReversed))" IconStyle="@(sortMode == CollectionsSortMode.TitleReversed ? "color: #1a73e8" : "visibility: hidden")" TextColor="@(sortMode == CollectionsSortMode.TitleReversed ? "#1a73e8" : "white")"/>
-    <DropdownButton Icon="check" Text="Last Modified" OnClick="@(() => ChangeOrder(CollectionsSortMode.LastModified))" IconStyle="@(sortMode == CollectionsSortMode.LastModified ? "color: #1a73e8" : "visibility: hidden")" TextColor="@(sortMode == CollectionsSortMode.LastModified ? "#1a73e8" : "white")"/>
-    <DropdownButton Icon="check" Text="Last Modified Reversed" OnClick="@(() => ChangeOrder(CollectionsSortMode.LastModifiedReversed))" IconStyle="@(sortMode == CollectionsSortMode.LastModifiedReversed ? "color: #1a73e8" : "visibility: hidden")" TextColor="@(sortMode == CollectionsSortMode.LastModifiedReversed ? "#1a73e8" : "white")"/>
+    <DropdownButton Icon="check" Text="Collection Title" OnClick="@(() => ChangeOrder(CollectionsSortMode.Title))" IconStyle="@(sortMode == CollectionsSortMode.Title ? "color: #0080ff" : "visibility: hidden")" TextColor="@(sortMode == CollectionsSortMode.Title ? "#0080ff" : "white")"/>
+    <DropdownButton Icon="check" Text="Title Reversed" OnClick="@(() => ChangeOrder(CollectionsSortMode.TitleReversed))" IconStyle="@(sortMode == CollectionsSortMode.TitleReversed ? "color: #0080ff" : "visibility: hidden")" TextColor="@(sortMode == CollectionsSortMode.TitleReversed ? "#0080ff" : "white")"/>
+    <DropdownButton Icon="check" Text="Last Modified" OnClick="@(() => ChangeOrder(CollectionsSortMode.LastModified))" IconStyle="@(sortMode == CollectionsSortMode.LastModified ? "color: #0080ff" : "visibility: hidden")" TextColor="@(sortMode == CollectionsSortMode.LastModified ? "#0080ff" : "white")"/>
+    <DropdownButton Icon="check" Text="Last Modified Reversed" OnClick="@(() => ChangeOrder(CollectionsSortMode.LastModifiedReversed))" IconStyle="@(sortMode == CollectionsSortMode.LastModifiedReversed ? "color: #0080ff" : "visibility: hidden")" TextColor="@(sortMode == CollectionsSortMode.LastModifiedReversed ? "#0080ff" : "white")"/>
 </Dropdown>
 
 <main>
