--- a/MemoryMosaic/Styles/Components/Input/TextInput.scss
+++ b/MemoryMosaic/Styles/Components/Input/TextInput.scss
@@ -1,6 +1,6 @@
 @import "../../Constants";
 
-input[type=text] {
+input[type="text"] {
 	background-color: black;
 	border: 2px solid white;
 	outline: none;
@@ -8,7 +8,7 @@ input[type=text] {
 	border-radius: 4px;
 }
 
-input[type=text]:focus-visible {
+input[type="text"]:focus-visible {
 	border: 2px solid $AccentColor;
 	outline: none;
 }
