--- a/MemoryMosaic/Styles/Components/FullscreenViewer/FullscreenViewer.scss
+++ b/MemoryMosaic/Styles/Components/FullscreenViewer/FullscreenViewer.scss
@@ -95,7 +95,7 @@
 		@include flex-col;
 		height: 100%;
 		transition: margin-right 0.35s cubic-bezier(0.4, 0, 0.2, 1);
-		width: 400px;
+		width: 350px;
 		padding: 12px;
 		border-left: 2px solid white;
 
@@ -104,7 +104,7 @@
 		}
 
 		&.hidden {
-			margin-right: -426px; //Width of sidebar + (padding * 2) + border-left
+			margin-right: -376px; //Width of info + (padding * 2) + border-left
 		}
 
 		> span {
@@ -123,7 +123,7 @@
 			}
 			
 			> span:last-of-type {
-				width: 200px;
+				width: 240px;
 				white-space: nowrap;
 				overflow: hidden;
 				text-overflow: ellipsis;
