--- a/MemoryMosaic/Styles/Mixins.scss
+++ b/MemoryMosaic/Styles/Mixins.scss
@@ -57,3 +57,7 @@
 	left: $left;
 	transform: translate(-50%, -50%);
 }
+
+@mixin transition($property, $duration)  {
+	transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+}
