Decrease text button padding from 11px to 10px, and fix some focused element colors.

--- a/MemoryMosaic/Styles/Components/Input/Checkbox.scss
+++ b/MemoryMosaic/Styles/Components/Input/Checkbox.scss
@@ -12,4 +12,10 @@
 
 		&:last-of-type { margin-top: -1px; }
 	}
+
+	&:focus-visible {
+		border: none;
+		outline: 2px solid $AccentColor;
+		border-radius: 4px;
+	}
 }
