--- a/MemoryMosaic/Styles/Components/Buttons/DropdownButton.scss
+++ b/MemoryMosaic/Styles/Components/Buttons/DropdownButton.scss
@@ -6,11 +6,13 @@
     display: flex;
     align-items: center;
     font-size: 1rem;
-    padding: 11px;
-}
+    padding: 10px;
 
-.dropdownBtn > :first-child {
-    padding-right: 11px;
-}
+    > :first-child { padding-right: 10px; }
 
-.dropdownBtn:hover { @include hover; }
+    &:hover { @include hover; }
+
+    &:focus-visible {
+        outline: 2px solid $AccentColor;
+    }
+}
