--- a/MemoryMosaic/Styles/Components/Buttons/IconButton.scss
+++ b/MemoryMosaic/Styles/Components/Buttons/IconButton.scss
@@ -10,6 +10,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-}
+    
+    &:hover { @include hover; }
 
-.iconBtn:hover { @include hover; }
+    &:focus-visible {
+        border: 2px solid $AccentColor;
+        outline: none;
+    }
+}
