--- a/MemoryMosaic/Styles/Pages/Collections.scss
+++ b/MemoryMosaic/Styles/Pages/Collections.scss
@@ -2,7 +2,9 @@
 @import "../Mixins";
 
 header {
-	@include page-header(1px solid gray, 75px, 164px);
+	@include page-header(1px solid gray, auto, 164px);
+	padding-top: 12px;
+	padding-bottom: 12px;
 
 	> #collectionsText {
 		font-size: 20px;
@@ -11,14 +13,15 @@ header {
 	}
 
 	> #checkboxes {
-		@include flex-col;
+		@include flex-row;
+		gap: 16px;
 		position: absolute;
-		right: 470px;
+		right: 300px;
 	}
 
 	> #sortBtn {
 		position: absolute;
-		right: 170px;
+		right: 100px;
 	}
 }
 
