--- a/MemoryMosaic/Styles/Components/Input/IntInput.scss
+++ b/MemoryMosaic/Styles/Components/Input/IntInput.scss
@@ -2,15 +2,15 @@
 
 input[type="number"] {
 	background-color: black;
-	border: 2px solid white;
-	outline: none;
 	font-size: 16px;
+	border: none;
+	outline: 1px solid white;
+	padding: 4px;
 	border-radius: 4px;
-}
 
-input[type="number"]:focus-visible {
-	border: 2px solid $AccentColor;
-	outline: none;
+	&:focus-visible {
+		outline: 2px solid $AccentColor;
+	}
 }
 
 .hide-number-buttons {
