--- a/MemoryMosaic/Styles/Components/Input/TextInput.scss
+++ b/MemoryMosaic/Styles/Components/Input/TextInput.scss
@@ -2,13 +2,13 @@
 
 input[type="text"] {
 	background-color: black;
-	border: 2px solid white;
-	outline: none;
 	font-size: 16px;
+	border: none;
+	outline: 1px solid white;
+	padding: 4px;
 	border-radius: 4px;
-}
 
-input[type="text"]:focus-visible {
-	border: 2px solid $AccentColor;
-	outline: none;
+	&:focus-visible {
+		outline: 2px solid $AccentColor;
+	}
 }
