--- a/MemoryMosaic/Styles/Mixins.scss
+++ b/MemoryMosaic/Styles/Mixins.scss
@@ -59,5 +59,5 @@
 }
 
 @mixin transition($property, $duration)  {
-	transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+	transition: $property $duration cubic-bezier(0.4, 0, 0.2, 1);
 }
