--- a/MemoryMosaic/Styles/Pages/LCV/CollectionView.scss
+++ b/MemoryMosaic/Styles/Pages/LCV/CollectionView.scss
@@ -12,7 +12,7 @@
 	> .material-icons-outlined { margin-left: 20px; }
 
 	> input[type="text"] {
-		border: none;
+		outline: none;
 		border-bottom: 2px solid black;
 		border-radius: 0;
 
