--- a/MemoryMosaic/Shared/Modal/CollectionSelector.razor
+++ b/MemoryMosaic/Shared/Modal/CollectionSelector.razor
@@ -66,7 +66,6 @@
                                 <img src="mm_library/@folders[i].Cover" alt=""/>
                             }
                         </div>
-
                         <Checkbox @bind-Input="@checkedFolders[ii]" Label="@folders[i].Name"/>
                     </div>
                 }
@@ -136,6 +135,7 @@
     {
         ClearFolderChecks();
         checkedFolderIndex = -1;
+        checkedAlbums[index] = !checkedAlbums[index];
     }
 
     private void FolderClicked(int index)
