For string types across the project, replace null! with ""

--- a/MemoryMosaic/Pages/Collections.razor
+++ b/MemoryMosaic/Pages/Collections.razor
@@ -46,7 +46,7 @@
 
     private Dropdown dropdown = null!;
     
-    private string sortBtnText = null!;
+    private string sortBtnText = "";
     private static CollectionsSortMode sortMode = CollectionsSortMode.LastModified;
     private static bool showAlbums = true, showFolders, showReadonly = true;
 
