--- a/MemoryMosaic/Pages/Import.razor
+++ b/MemoryMosaic/Pages/Import.razor
@@ -179,7 +179,7 @@
 	@* public static int minYear = 2000, maxYear = DateTime.Today.Year; *@
 
 	@* ///Stores the absolute path of every supported file in mm_import. *@
-	@* private static List<string> allAbsPaths = null!; *@
+	@* private static List<string> allAbsPaths = ""; *@
 
 	@* ///List of data about each supported file in mm_import. *@
 	@* public static List<ImportItem> importFiles = null!; *@
