--- a/MemoryMosaic/Pages/LCV/CollectionView.razor
+++ b/MemoryMosaic/Pages/LCV/CollectionView.razor
@@ -49,7 +49,7 @@
 
 @code {
 	[Parameter]
-	public string CollectionID { get; set; } = null!;
+	public string CollectionID { get; set; } = "";
 	private Collection? collection;
 
 	private LibraryContentViewer lcv = null!;
