--- a/MemoryMosaic/Shared/Buttons/LinkButton.razor
+++ b/MemoryMosaic/Shared/Buttons/LinkButton.razor
@@ -6,5 +6,5 @@
 </a>
 
 @code {
-	[Parameter, EditorRequired] public string Href { get; set; } = null!;
+	[Parameter, EditorRequired] public string Href { get; set; } = "";
 }
