--- a/MemoryMosaic/Shared/MaterialIcon.razor
+++ b/MemoryMosaic/Shared/MaterialIcon.razor
@@ -14,7 +14,7 @@ else
 }
 
 @code {
-	[Parameter, EditorRequired] public string Icon { get; set; } = null!;
+	[Parameter, EditorRequired] public string Icon { get; set; } = "";
 
 	[Parameter] public int Size { get; set; } = 24;
 
