--- a/MemoryMosaic/Shared/Modal/Dropdown.razor
+++ b/MemoryMosaic/Shared/Modal/Dropdown.razor
@@ -9,5 +9,5 @@
 @code {
 	[Parameter, EditorRequired] public RenderFragment ChildContent { get; set; } = null!;
 
-	[Parameter, EditorRequired] public string Positioning { get; set; } = null!;
+	[Parameter, EditorRequired] public string Positioning { get; set; } = "";
 }
