--- a/MemoryMosaic/Shared/Modal/FullscreenViewer/FullscreenViewer.razor
+++ b/MemoryMosaic/Shared/Modal/FullscreenViewer/FullscreenViewer.razor
@@ -180,7 +180,7 @@
 	private DateTime? newDateTaken;
 
 	private string? newFilename;
-	private string ext = null!;
+	private string ext = "";
 	
 	private int index;
 	public int Index
