--- a/MemoryMosaic/Shared/Modal/FullscreenViewer/VideoPlayer.razor
+++ b/MemoryMosaic/Shared/Modal/FullscreenViewer/VideoPlayer.razor
@@ -23,5 +23,5 @@
 </div>
 
 @code {
-	[Parameter, EditorRequired] public string Path { get; set; } = null!;
+	[Parameter, EditorRequired] public string Path { get; set; } = "";
 }
