--- a/MemoryMosaic/Shared/Modal/ProgressPopUp.razor
+++ b/MemoryMosaic/Shared/Modal/ProgressPopUp.razor
@@ -10,7 +10,7 @@
 
 @code {
     [Parameter, EditorRequired]
-    public string Message { get; set; } = null!;
+    public string Message { get; set; } = "";
 
     [Parameter]
     public int Width { get; set; } = 200;
