--- a/MemoryMosaic/Shared/Modal/TwoChoiceInput.razor
+++ b/MemoryMosaic/Shared/Modal/TwoChoiceInput.razor
@@ -16,7 +16,7 @@
 
 @code {
     [Parameter, EditorRequired]
-    public string Message { get; set; } = null!;
+    public string Message { get; set; } = "";
 
     [Parameter, EditorRequired]
     public Action NoBtnClick { get; set; } = null!;
