--- a/MemoryMosaic/Shared/Buttons/IconTextButton.razor
+++ b/MemoryMosaic/Shared/Buttons/IconTextButton.razor
@@ -7,7 +7,7 @@
 </button>
 
 @code {
-	[Parameter, EditorRequired] public string Text { get; set; } = null!;
+	[Parameter, EditorRequired] public string Text { get; set; } = "";
 
 	[Parameter] public string TextColor { get; set; } = "white";
 
