Finally address three tiny warnings

--- a/MemoryMosaic/Pages/Maintenance/Backups.razor
+++ b/MemoryMosaic/Pages/Maintenance/Backups.razor
@@ -87,19 +87,17 @@
         
         //Dump database contents to a .bak file.
         L.LogLine("Starting psql process", LogLevel.Debug);
-        using Process process = new Process
+        using Process process = new Process();
+        process.StartInfo = new ProcessStartInfo
         {
-            StartInfo = new ProcessStartInfo
-            {
-                WindowStyle = ProcessWindowStyle.Hidden,
-                CreateNoWindow = true,
-                RedirectStandardError = false,
-                RedirectStandardInput = false,
-                RedirectStandardOutput = false,
-                WorkingDirectory = $"C:/Program Files/PostgreSQL/{S.POSTGRES_VERSION}/bin/",
-                FileName = "cmd.exe",
-                Arguments = $"/C pg_dump.exe \"host=localhost port=5432 dbname=MemoryMosaic user=postgres password=Ph0t0s_Server\" > \"{dbDumpPath}\"", //https://www.postgresqltutorial.com/postgresql-backup-database/   How to run this cmd without a password prompt: https://stackoverflow.com/a/62417775
-            }
+            WindowStyle = ProcessWindowStyle.Hidden,
+            CreateNoWindow = true,
+            RedirectStandardError = false,
+            RedirectStandardInput = false,
+            RedirectStandardOutput = false,
+            WorkingDirectory = $"C:/Program Files/PostgreSQL/{S.POSTGRES_VERSION}/bin/",
+            FileName = "cmd.exe",
+            Arguments = $"/C pg_dump.exe \"host=localhost port=5432 dbname=MemoryMosaic user=postgres password=Ph0t0s_Server\" > \"{dbDumpPath}\"", //https://www.postgresqltutorial.com/postgresql-backup-database/   How to run this cmd without a password prompt: https://stackoverflow.com/a/62417775
         };
         process.Start();
         await process.WaitForExitAsync();
