Add Date Added page

--- a/MemoryMosaic/Shared/NavMenu.razor
+++ b/MemoryMosaic/Shared/NavMenu.razor
@@ -8,6 +8,7 @@
 	<NavLink class="navLink" href="import" Match="NavLinkMatch.All"><MaterialIcon Icon="backup"/><span>Import</span></NavLink>
 	<NavLink class="navLink" href="starred" Match="NavLinkMatch.All"><MaterialIcon Icon="star"/><span>Starred</span></NavLink>
 	<NavLink class="navLink" href="no-dt" Match="NavLinkMatch.All"><MaterialIcon Icon="help_outline"/><span>No DT</span></NavLink>
+	<NavLink class="navLink" href="date-added" Match="NavLinkMatch.All"><MaterialIcon Icon="calendar_month"/><span>Date Added</span></NavLink>
 	<NavLink class="navLink" href="memories" Match="NavLinkMatch.All"><MaterialIcon Icon="history"/><span>Memories</span></NavLink>
 	<NavLink class="navLink" href="all-items" Match="NavLinkMatch.All"><MaterialIcon Icon="select_all"/><span>All Items</span></NavLink>
 	<NavLink class="navLink" href="search" Match="NavLinkMatch.All"><MaterialIcon Icon="search"/><span>Search</span></NavLink>
