--- a/MemoryMosaic/Shared/Modal/CollectionSelector.razor
+++ b/MemoryMosaic/Shared/Modal/CollectionSelector.razor
@@ -13,7 +13,7 @@
             </div>
         </div>
 
-        <CollectionCreator @ref="@collectionCreator" Collections="@(albums.Concat(folders).ToList())" OnCollectionCreate="@SelectNewCollection"/>
+        <CollectionCreator @ref="@collectionCreator" Collections="@(Albums.Concat(Folders).ToList())" OnCollectionCreate="@SelectNewCollection"/>
 
         <div id="collection-groups">
             <IconButton Icon="history" OnClick="@(() => PreviousSelectionBtnClick(false))" Title="Restore the last selection of collections."/>
@@ -35,38 +35,38 @@
         <div id="collections">
             <span>Albums</span>
             <div>
-                @for (int i = 0; i < albums.Count; i++)
+                @for (int i = 0; i < Albums.Count; i++)
                 {
-                    if (!String.IsNullOrWhiteSpace(searchText) && albums[i].Name.IndexOf(searchText, StringComparison.InvariantCultureIgnoreCase) == -1) continue;
+                    if (!String.IsNullOrWhiteSpace(searchText) && Albums[i].Name.IndexOf(searchText, StringComparison.InvariantCultureIgnoreCase) == -1) continue;
 
                     int ii = i;
                     <div class="collection" @onclick="@(() => AlbumClicked(ii))">
                         <div class="cover">
-                            @if (!String.IsNullOrWhiteSpace(albums[i].Cover))
+                            @if (!String.IsNullOrWhiteSpace(Albums[i].Cover))
                             {
-                                <img src="mm_library/@albums[i].Cover" alt=""/>
+                                <img src="mm_library/@Albums[i].Cover" alt=""/>
                             }
                         </div>
-                        <Checkbox @bind-Input="@checkedAlbums[ii]" Label="@albums[i].Name"/>
+                        <Checkbox @bind-Input="@checkedAlbums[ii]" Label="@Albums[i].Name"/>
                     </div>
                 }
             </div>
 
             <span>Folders</span>
             <div>
-                @for (int i = 0; i < folders.Count; i++)
+                @for (int i = 0; i < Folders.Count; i++)
                 {
-                    if (!String.IsNullOrWhiteSpace(searchText) && folders[i].Name.IndexOf(searchText, StringComparison.InvariantCultureIgnoreCase) == -1) continue;
+                    if (!String.IsNullOrWhiteSpace(searchText) && Folders[i].Name.IndexOf(searchText, StringComparison.InvariantCultureIgnoreCase) == -1) continue;
 
                     int ii = i;
                     <div class="collection" @onclick="@(() => FolderClicked(ii))">
                         <div class="cover">
-                            @if (!String.IsNullOrWhiteSpace(folders[i].Cover))
+                            @if (!String.IsNullOrWhiteSpace(Folders[i].Cover))
                             {
-                                <img src="mm_library/@folders[i].Cover" alt=""/>
+                                <img src="mm_library/@Folders[i].Cover" alt=""/>
                             }
                         </div>
-                        <Checkbox @bind-Input="@checkedFolders[ii]" Label="@folders[i].Name"/>
+                        <Checkbox @bind-Input="@checkedFolders[ii]" Label="@Folders[i].Name"/>
                     </div>
                 }
             </div>
@@ -77,11 +77,12 @@
 <KeyboardShortcuts AltC="@Toggle"/>
 
 @code {
-    //TODO: I think this stuff wouldn't need to be marked static if we just make an instance of CS and then use that in Import and ImportFile...?
-    public static List<Collection> albums = null!, folders = null!;
-    public static List<bool> checkedAlbums = null!;
-    private static List<bool> checkedFolders = null!;
-    public static int checkedFolderIndex = -1; //Which index in folders is checked (can only have 1 checked (true)).
+    public List<Collection> Albums { get; private set; } = null!;
+    public List<Collection> Folders { get; private set; } = null!;
+    
+    private List<bool> checkedAlbums = null!;
+    private List<bool> checkedFolders = null!;
+    public int checkedFolderIndex = -1; //Which index in Folders is checked (can only have 1 checked).
 
     private string? searchText;
 
@@ -101,10 +102,10 @@
 
     private void RefreshData()
     {
-        albums = C.GetCollectionsTable(true, false, false);
-        folders = C.GetCollectionsTable(false, true, false);
-        checkedAlbums = (from album in albums select new bool()).ToList();
-        checkedFolders = (from folder in folders select new bool()).ToList();
+        Albums = C.GetCollectionsTable(true, false, false);
+        Folders = C.GetCollectionsTable(false, true, false);
+        checkedAlbums = (from album in Albums select new bool()).ToList();
+        checkedFolders = (from folder in Folders select new bool()).ToList();
         checkedFolderIndex = -1;
     }
 
@@ -121,11 +122,11 @@
         Rerender?.Invoke();
     }
 
-    private static void ClearAlbumChecks() => checkedAlbums = checkedAlbums.Select(_ => false).ToList();
+    private void ClearAlbumChecks() => checkedAlbums = checkedAlbums.Select(_ => false).ToList();
 
-    private static void ClearFolderChecks() => checkedFolders = checkedFolders.Select(_ => false).ToList();
+    private void ClearFolderChecks() => checkedFolders = checkedFolders.Select(_ => false).ToList();
 
-    private static void ClearSelectedCollections()
+    private void ClearSelectedCollections()
     {
         ClearAlbumChecks();
         ClearFolderChecks();
@@ -152,14 +153,14 @@
 
         await InvokeAsync(StateHasChanged); //https://stackoverflow.com/questions/56477829/how-to-fix-the-current-thread-is-not-associated-with-the-renderers-synchroniza
 
-        int newestAlbumIndex = albums.FindIndex(a => a.Name == collectionCreator.NewCollectionName);
+        int newestAlbumIndex = Albums.FindIndex(a => a.Name == collectionCreator.NewCollectionName);
         if (newestAlbumIndex != -1)
         {
             checkedAlbums[newestAlbumIndex] = true;
         }
         else
         {
-            int newestFolderIndex = folders.FindIndex(f => f.Name == collectionCreator.NewCollectionName);
+            int newestFolderIndex = Folders.FindIndex(f => f.Name == collectionCreator.NewCollectionName);
             if (newestFolderIndex == -1) return;
             checkedFolderIndex = newestFolderIndex;
             checkedFolders[newestFolderIndex] = true;
@@ -179,12 +180,12 @@
             {
                 if (SelectedItem != Guid.Empty)
                 {
-                    await C.AddToCollectionAsync(folders[checkedFolderIndex].Id, SelectedItem);
+                    await C.AddToCollectionAsync(Folders[checkedFolderIndex].Id, SelectedItem);
                 }
                 else
                 {
                     foreach (Guid item in SelectedItems)
-                        await C.AddToCollectionAsync(folders[checkedFolderIndex].Id, item);
+                        await C.AddToCollectionAsync(Folders[checkedFolderIndex].Id, item);
                 }
             }
             else //Adding to album(s).
@@ -195,12 +196,12 @@
 
                     if (SelectedItem != Guid.Empty)
                     {
-                        await C.AddToCollectionAsync(albums[c].Id, SelectedItem);
+                        await C.AddToCollectionAsync(Albums[c].Id, SelectedItem);
                     }
                     else
                     {
                         foreach (Guid item in SelectedItems)
-                            await C.AddToCollectionAsync(albums[c].Id, item);
+                            await C.AddToCollectionAsync(Albums[c].Id, item);
                     }
                 }
             }
@@ -238,7 +239,7 @@
             string[] input = File.ReadAllLines(filePath);
             if (input[0] == "F")
             {
-                checkedFolderIndex = FindIndex(checkedFolders, folders, input[1]);
+                checkedFolderIndex = FindIndex(checkedFolders, Folders, input[1]);
                 if (checkedFolderIndex == -1) rewrite = true;
                 else checkedFolders[checkedFolderIndex] = true;
             }
@@ -246,7 +247,7 @@
             {
                 for (int i = 1; i < input.Length; i++)
                 {
-                    int index = FindIndex(checkedAlbums, albums, input[i]);
+                    int index = FindIndex(checkedAlbums, Albums, input[i]);
                     if (index == -1)
                     {
                         rewrite = true;
@@ -268,14 +269,14 @@
         void SaveSelectionToDisk()
         {
             if (checkedFolders.Any(b => b))
-                File.WriteAllText(filePath, $"F\n{folders[checkedFolderIndex].Id}");
+                File.WriteAllText(filePath, $"F\n{Folders[checkedFolderIndex].Id}");
             else
             {
                 File.WriteAllText(filePath, "A\n");
                 for (int i = 0; i < checkedAlbums.Count; i++)
                 {
                     if (checkedAlbums[i])
-                        File.AppendAllText(filePath, $"{albums[i].Id}\n");
+                        File.AppendAllText(filePath, $"{Albums[i].Id}\n");
                 }
             }
         }
